--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <p class="aboutme">My research interests include <b>distributed systems, datacenter networking and peer-to-peer systems</b>.
 
-                <p class="aboutme">My research focuses on understanding the feasability requirements of <b>resource disaggregated datacenters</b> and building systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
+                <p class="aboutme">My research focuses on understanding the feasibility requirements of <b>resource disaggregated datacenters</b> and building systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
             </div>
             <div class="row panel">
                 <div class="col-md-12 col-xs-12 col-sm-12 half-panel">
