--- a/index.html
+++ b/index.html
@@ -40,15 +40,32 @@
                 </div>
                 <p class="aboutme"> I am a first year Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
 
-                <p class="aboutme">My research interests include <b>distributed systems, datacenter networking and peer-to-peer systems</b>.
+                <p class="aboutme">My research interests include <b>distributed systems, data-center networking and peer-to-peer systems</b>.
 
-                <p class="aboutme">My research focuses on understanding the feasibility requirements of <b>resource disaggregated datacenters</b> and building systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
+                <p class="aboutme"> My research focuses on two areas: 
+
+                <p class="aboutme2"><b>Resource disaggregation in datacenters</b>. This 
+                involves augmenting the research communities understanding of 
+                how systems change when moving to disaggregated architectures and building systems that can take advantage of the elasticity and fine-grained resource multiplexing that disaggregation enables without degraded performance. </p>
+                <p class="aboutme2"><b>Privacy-aware distributed systems for the cloud</b>. Systems run on public clouds leak information (network, storage, memory) accesses that can be used to learn abusable information about the data being accessed. Initial work in this area characterizes the information leakage of existing encrypted key-value stores and involves building a high-performance key-value store whose leakage cannot be abused.</p>
             </div>
             <div class="row panel">
                 <div class="col-md-12 col-xs-12 col-sm-12 half-panel">
                     <div class="section-title">
                         <h2><i class="fa fa-briefcase section-icon" aria-hidden="true"></i>Work Experience</h2>
                     </div>
+		    <ul class="list-unstyled exp">
+                        <div class="exp-title">
+                            <span class="exp-title-title"><b>Google</b> &middot; Software Engineer Intern</span>
+                            <span class="exp-title-dates">Summer 2018</span>
+                        </div>
+                        <div class="exp-desc">
+                         <p>Worked with the <b>Network Infrastructure team</b> in <i>Sunnyvale, CA</i> to <b> to improve network
+                         bandwidth allocation on Google's inter-datacenter
+                         WAN.</b> This work builds upon Google's hierarchal bandwidth allocator, <a href="https://ai.google/research/pubs/pub43838">BwE</a>. It involved developing new bandwidth allocation techniques that leveraged machine learning and real-time control literature; and algorithmic analysis of existing bandwidth allocation techniques.</p>
+                        </div>
+                    </ul>
+
                     <ul class="list-unstyled exp">
                         <div class="exp-title">
                             <span class="exp-title-title"><b>Microsoft</b> &middot; Software Engineer Intern</span>
