--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="section-title">
                     <h2><i class="fa fa-user section-icon" aria-hidden="true"></i>About Me</h2>
                 </div>
-                <p class="aboutme"> I am a first year Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
+                <p class="aboutme"> I am a Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
 
                 <p class="aboutme">My research interests include <b>distributed systems, data-center networking and peer-to-peer systems</b>.
 
