left grad school

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <img class="img-responsive mainpic" src="images/mainpic2.jpg">
             </div>
             <div class="sidebar-name">Justin Miron</div>
-            <div class="sidebar-title">PhD Student</div>
-            <div class="sidebar-uni">Cornell University</div>
-            <div class="sidebar-location">Gates Hall 322</div>
+            <div class="sidebar-title">Software Engineer</div>
+            <div class="sidebar-uni"></div>
+            <div class="sidebar-location"></div>
 
             <div class="sidebar-icons row">
-                <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+                <a href="mailto:justinmiron11@gmail.com" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
                 <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
                 <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
                 <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
@@ -38,16 +38,7 @@
                 <div class="section-title">
                     <h2><i class="fa fa-user section-icon" aria-hidden="true"></i>About Me</h2>
                 </div>
-                <p class="aboutme"> I am a Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
-
-                <p class="aboutme">My research interests include <b>distributed systems, data-center networking and peer-to-peer systems</b>.
-
-                <p class="aboutme"> My research focuses on two areas: 
-
-                <p class="aboutme2"><b>Resource disaggregation in datacenters</b>. This 
-                involves augmenting the research communities understanding of 
-                how systems change when moving to disaggregated architectures and building systems that can take advantage of the elasticity and fine-grained resource multiplexing that disaggregation enables without degraded performance. </p>
-                <p class="aboutme2"><b>Privacy-aware distributed systems for the cloud</b>. Systems run on public clouds leak information (network, storage, memory) accesses that can be used to learn abusable information about the data being accessed. Initial work in this area characterizes the information leakage of existing encrypted key-value stores and involves building a high-performance key-value store whose leakage cannot be abused.</p>
+                <p class="aboutme">Hi, I'm Justin.</p>
             </div>
             <div class="row panel">
                 <div class="col-md-12 col-xs-12 col-sm-12 half-panel">
