update email field

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 </div>
                     <div class="contact">
                         <div class="contact-single col-md-3">
-                            <span class="contact-icon"><a href="mailto:justinmiron@cs.cornell.edu"><i class="fa fa-envelope fa-4x" aria-hidden="true"></i></a></span><br>
-                            <p class="contact-field">justinmiron@cs.cornell.edu</p>
+                            <span class="contact-icon"><a href="mailto:justinmiron11@gmail.com"><i class="fa fa-envelope fa-4x" aria-hidden="true"></i></a></span><br>
+                            <p class="contact-field">justinmiron11@gmail.com</p>
                         </div>
                         <div class="contact-single col-md-3">
                             <span class="contact-icon"> <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></span><br>
