--- a/index.html
+++ b/index.html
@@ -17,28 +17,37 @@
  <!-- Navigation -->
 <body>
     <div class="page-wrapper">
-        <div class="page-content col-md-12 page col-xs-12 col-sm-12 ce">
-            <div class="row">
-                <img class="img-responsive mainpic" src="images/penguins.png">
+
+        <div class="page-content col-md-12 col-xs-12 col-sm-12">
+            <div class="row page-row1">
+                <div class="page col-md-12 col-xs-12 col-sm-12">
+                    <div class="row">
+                        <img class="img-responsive mainpic" src="images/penguins.png">
+                    </div>
+                    <div class="spacing"></div>
+                    <div class="row">
+                       <p class="title">Software Engineer</p>
+                    </div>
+                    <div class="row seperatehr"></div>
+                    <div class="row">
+                        <p class="links">About / Work</p>
+                   </div>
+                   <div class="spacing2"></div>
+                   <div class="icons">
+                        <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+                        <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/justinmiron11" class="sidebar-icon"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                        <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
+                   </div>
+                </div> 
             </div>
-            <div class="spacing"></div>
-            <div class="row">
-               <p class="title">Software Engineer</p>
+            <div class="row page-row">
+  <!--               <div class="page"> -->
+                <!-- <p>hi WHERE IS THIS TEXT</p> -->
+                <!-- </div> -->
             </div>
-            <div class="row seperatehr"></div>
-            <div class="row">
-                <p class="links">About / Work</p>
-           </div>
-           <div class="spacing2"></div>
-           <div class="icons">
-                <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-                <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                <a href="https://twitter.com/justinmiron11" class="sidebar-icon"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
-                <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
-           </div>
-        </div> 
-        
+        </div>
     </div>
     <!-- scripts -->
     <script src="js/jquery.js"></script>
