upgrade mailing address

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                    </div>
                    <div class="spacing2"></div>
                    <div class="icons">
-                        <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+                        <a href="mailto:justinmiron11@gmail.com" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
                         <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
                         <a href="https://twitter.com/justinmiron11" class="sidebar-icon"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
                         <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
