setup of about page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/shared.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap" rel="stylesheet"> 
 </head>
 
  <!-- Navigation -->
@@ -40,12 +41,17 @@
                         <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
                         <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
                    </div>
-                </div> 
+                </div>
             </div>
-            <div class="row page-row">
-  <!--               <div class="page"> -->
-                <!-- <p>hi WHERE IS THIS TEXT</p> -->
-                <!-- </div> -->
+            <div class="row about-page">
+                <div class="col-md-6 col-sm-6 col-xs-6 about-page-left">
+                    <img class="img-responsive selfpic" src="images/selfpic.png">
+                    <div class="about-spacing-left"></div>
+                    <p class="about-text-left">About<p>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-6 about-page-right">
+                    Hi. I'm Justin.
+                </div>
             </div>
         </div>
     </div>
