i was a phd student

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
                     </ul>
                    <ul class="list-unstyled exp">
                         <div class="exp-title">
+                            <span class="exp-title-title"><b>Cornell University</b> &middot; PhD Research Assistant</span>
+                            <span class="exp-title-dates">August 2017 - December 2018</span>
+                        </div>
+                        <div class="exp-desc">
+                        <p>Researched <b>distributed data processing systems</b> for an emerging datacenter architecture, <b>resource disaggregation</b>, that tolerate higher network latency while leveraging fine-grained resource multiplexing and application elasticity provided by disaggregation. Seperate work involved  characterizing information leakage in cloud distributed systems and <b>building a new privacy-aware key-value store that guarentees information leakage is not abusable.</b></p>
+                        </div>
+                   </ul>
+                   <ul class="list-unstyled exp">
+                        <div class="exp-title">
                             <span class="exp-title-title"><b>Google</b> &middot; Software Engineer Intern</span>
                             <span class="exp-title-dates">Summer 2018</span>
                         </div>
@@ -89,7 +98,6 @@
                          WAN.</b> This work builds upon Google's hierarchal bandwidth allocator, <a href="https://ai.google/research/pubs/pub43838">BwE</a>. It involved developing new bandwidth allocation techniques that leveraged machine learning and real-time control literature; and algorithmic analysis of existing bandwidth allocation techniques.</p>
                         </div>
                     </ul>
-
                     <ul class="list-unstyled exp">
                         <div class="exp-title">
                             <span class="exp-title-title"><b>Microsoft</b> &middot; Software Engineer Intern</span>
@@ -117,15 +125,6 @@
                             <p>Worked to <b>optimize a parallel program runtime system</b> Charm++, a parallel object-oriented programming language, for performance. Additionally, <b>modified parallel algorithms</b> for shared memory parallel applications <b>to operate scalably in a distributed memory context.</b></p>
                         </div>
                     </ul>
-                    <ul class="list-unstyled exp">
-                        <div class="exp-title">
-                            <span class="exp-title-title"><b>Google</b> &middot; Software Engineer Intern</span>
-                            <span class="exp-title-dates">Summer 2016</span>
-                        </div>
-                        <div class="exp-desc">
-                            <p>Worked with the <b>Google Compute Engine team</b> to improve cloud network reliability for development clusters through <b>developing network failure detection tools.</b></p>
-                        </div>
-                    </ul> 
                 </div>
             </div>
 
