--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
             <div class="row work-history">
                 <div class="col-md-6 col-sm-6 col-xs-6 work-page-left">
                     <p class="about-text-left">Work History</p>
+                    <div class="companies">
+                    <img class="img-responsive company-logo" src="images/logos/goog.png">
+                    <img class="img-responsive company-logo" src="images/logos/bloXroute-Labs.jpg">
+                    <img class="img-responsive company-logo" src="images/logos/cornell.png">
+                    <img class="img-responsive company-logo" src="images/logos/msft.png">
+                    <img class="img-responsive company-logo" src="images/logos/charmworks.png">
+                    <img class="img-responsive company-logo" src="images/logos/illinois.jpg">
+                    </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-6 work-page-right">
                    <ul class="list-unstyled exp">
