--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
 
                         <li class="work-list"><b>Tackling the network latency bottleneck when moving high performance computing applications to the cloud.</b> For example, my work with the UIUC Parallel Programming Lab and Charmworks on reducing latency through duplicating work.</li>
                     </ul>
+
+
+                    <p class="about-page-text">I also rock climb, play the guitar, and mess around with blockchains - right now I'm building out a <u><a class="internal-link" href="https://github.com/jmiron11/how-to-lose-money">cryptocurrency technical analysis infrastructure.</a></u></p>
                 </div>
+
             </div>
 
             <div class="row work-history">
