totally working currently listening to

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
  <!-- Navigation -->
 <body>
+    <!-- <input type="text" value="Hello there" id="me" /> -->
     <div class="container-fluid page-content">
         <div class="row">
             <div class="page-landing">
@@ -39,6 +40,11 @@
                         <a href="https://twitter.com/justinmiron11" class="sidebar-icon"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
                         <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
                         <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
+                   </div>
+                   <div class="spacing3"></div>
+                   <div class="row spotify">
+                        <a href="https://www.last.fm/user/TwentyOneKoalas" class="spotify-icon"><i class="fa fa-music fa-2x" aria-hidden="true"></i></a>
+                        <div class="spotify-information">Currently Listening: </div><div id="spotify-data" class="spotify-information">Nothing :(</div>
                    </div>
                 </div>
             </div>
@@ -150,6 +156,7 @@
         </div>
     </div>
     <!-- scripts -->
+    <script src="js/me.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/7d6346c2db.js"></script>
