update work history and color

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         </div>
         <div class="row row-eq-height">
             <div class="work-history">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 work-page-left">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 work-page-right">
+                    <a id="work-history"></a>
                     <p class="about-text-left">Work History</p>
                     <div class="companies">
                         <img class="img-responsive company-logo" src="images/logos/goog.png">
@@ -89,12 +90,9 @@
                         <img class="img-responsive company-logo" src="images/logos/charmworks.png">
                         <img class="img-responsive company-logo" src="images/logos/illinois.jpg">
                     </div>
-                    <div class="row flex-end">
+                    <div class="row">
                         <p class="links2"><a class="internal-link" href="#about">About</a> | <a class="internal-link" href="#work-history">Work</a></p>
                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 work-page-right">
-                    <a id="work-history"></a>
                    <ul class="list-unstyled exp">
                         <div class="exp-title">
                             <span class="exp-title-title"><b>BloXroute Labs</b> &middot; Research Engineer</span>
