fixing up the work history

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="about-spacing-left"></div>
                     <p class="about-text-left">About</p>
                     <div class="row">
-                        <p class="links2"><a class="internal-link" href="#about">About</a> | <a class="internal-link" href="#work-history">Work</a></p>
+                        <p class="links-light"><a class="internal-link" href="#about">About</a> | <a class="internal-link" href="#work-history">Work</a></p>
                    </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 about-page-right">
@@ -81,7 +81,7 @@
             <div class="work-history">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 work-page-right">
                     <a id="work-history"></a>
-                    <p class="about-text-left">Work History</p>
+                    <p class="work-history-text">Work History</p>
                     <div class="companies">
                         <img class="img-responsive company-logo" src="images/logos/goog.png">
                         <img class="img-responsive company-logo" src="images/logos/bloXroute-Labs.jpg">
@@ -91,7 +91,7 @@
                         <img class="img-responsive company-logo" src="images/logos/illinois.jpg">
                     </div>
                     <div class="row">
-                        <p class="links2"><a class="internal-link" href="#about">About</a> | <a class="internal-link" href="#work-history">Work</a></p>
+                        <p class="links-dark"><a class="internal-link" href="#about">About</a> | <a class="internal-link" href="#work-history">Work</a></p>
                    </div>
                    <ul class="list-unstyled exp">
                         <div class="exp-title">
