change my active project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 about-page-right">
                     <p class="about-page-text" style="font-weight:700">Hi. I'm Justin, a software engineer working out of Boston.</p>
-                    <p class="about-page-text">I think distributed systems and datacenter network problems are pretty neat. </p>
+                    <p class="about-page-text">I think distributed systems, datacenter networks, and peer-to-peer networks are pretty neat. </p>
 
                     <p class="about-page-text">A few things I've recently had the pleasure of working on:</p>
                     <ul>
@@ -71,9 +71,9 @@
                         <li class="work-list"><b>Building tools to better understand behavior in blockchain architectures. </b> For example, my work with BloXroute to build a blockchain measurement infrastructure that concurrently tracks data movement across thousands of peers.</li>
 
                         <li class="work-list"><b>Tackling the network latency bottleneck when moving high performance computing applications to the cloud.</b> For example, my work with the UIUC Parallel Programming Lab and Charmworks on reducing latency through duplicating work.</li>
-                    </ul>
+                    </ul>a
 
-                    <p class="about-page-text">I also rock climb, play the guitar, and mess around with blockchains - right now I'm building out a <u><a class="internal-link" href="https://github.com/jmiron11/cryptocurrency-analysis">cryptocurrency technical analysis infrastructure.</a></u></p>
+                    <p class="about-page-text">I also rock climb, play the guitar, and mess around with blockchains - right now I'm building out a <u><a class="internal-link" href="https://github.com/jmiron11/music-universe">music taste exploration tool</a></u></p>
                 </div>
             </div>
         </div>
