--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                         <li class="work-list"><b>Building tools to better understand behavior in blockchain architectures. </b> For example, my work with BloXroute to build a blockchain measurement infrastructure that concurrently tracks data movement across thousands of peers.</li>
 
                         <li class="work-list"><b>Tackling the network latency bottleneck when moving high performance computing applications to the cloud.</b> For example, my work with the UIUC Parallel Programming Lab and Charmworks on reducing latency through duplicating work.</li>
-                    </ul>a
+                    </ul>
 
-                    <p class="about-page-text">I also rock climb, play the guitar, and mess around with blockchains - right now I'm building out a <u><a class="internal-link" href="https://github.com/jmiron11/music-universe">music taste exploration tool</a></u></p>
+                    <p class="about-page-text">I also rock climb, play the guitar, and mess around with blockchains - right now I'm building out a <u><a class="internal-link" href="https://github.com/jmiron11/music-universe">music community site</a></u></p>
                 </div>
             </div>
         </div>
